removed auth from refresh
