# docs/swagger.json
@@ -1542,12 +1542,6 @@
                         "schema": {
                             "$ref": "#/definitions/dtos.ApiResponse"
                         }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.ApiResponse"
-                        }
                     }
                 }
             }
